# rustww

./: Cargo.toml  Makefile
server/: Cargo.toml
server/src/: main.rs
server_tests/src/: lib.rs
src/: battery.rs  fs.rs  geo.rs  lib.rs  math.rs  notify.rs  orient.rs  scope.rs  send.rs  storage.rs  sync.rs  task.rs  time.rs  utils.rs
src/io/: builder.rs  fetch.rs  mod.rs  pipe.rs  read.rs  utils.rs  write.rs
src/math/: extended.rs  full.rs  generic.rs  mod.rs  padded.rs
src/runtime/: mod.rs  web.rs
tests/: Cargo.toml  battery.rs  index.html  io.rs  math.rs
tests/src/: lib.rs  notify.rs
