[package]
name = "rustww"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["es_modules"]
es_modules = ["wasm_thread/es_modules"]

[dependencies]
async-mutex = "1.4.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.23", optional = true, features = ["js-sys"] }
into_string = "2.0.0"
js-sys = "0.3.60"
serde = { version = "1.0.147", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
utils-atomics = { version = "0.2.3", features = ["futures"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm_thread = "0.2.0"
web-sys = { version = "0.3.60", features = ["Blob", "Url", "Worker", "WorkerOptions", "DedicatedWorkerGlobalScope", "MessageEvent", "Notification", "NotificationOptions", "NotificationEvent", "Window", "NotificationPermission"] }

[workspace]
members = ["tests", "server"]
