[package]
name = "rustww"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["es_modules"]
es_modules = ["wasm_thread/es_modules"]

[dependencies]
async-channel = "1.7.1"
async-mutex = "1.4.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.23", features = ["js-sys", "wasmbind"] }
crossbeam = "0.8.2"
docfg = "0.1.0"
futures = "0.3.25"
getrandom = { version = "0.2.8", features = ["js"] }
into_string = "2.0.0"
js-sys = "0.3.60"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
serde_json = "1.0.89"
utils-atomics = { version = "0.2.3", features = ["futures"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm_thread = "0.2.0"
web-sys = { version = "0.3.60", features = ["Blob", "Url", "Worker", "WorkerOptions", "DedicatedWorkerGlobalScope", "MessageEvent", "Notification", "NotificationOptions", "NotificationEvent", "Window", "NotificationPermission", "Navigator", "ServiceWorkerContainer", "RegistrationOptions", "ServiceWorkerRegistration", "Geolocation", "DeviceOrientationEvent", "DeviceMotionEvent", "DeviceAcceleration", "DeviceRotationRate", "BatteryManager", "console", "File", "ReadableStream", "WritableStream", "StreamPipeOptions", "ReadableStreamDefaultReader", "ReadableStreamByobReader", "ReadableStreamGetReaderOptions", "ReadableStreamReaderMode", "ReadableStreamDefaultController", "Response", "WritableStreamDefaultWriter", "RequestInit", "RequestCache", "RequestCredentials", "Headers", "RequestMode", "FormData", "UrlSearchParams", "Request", "RequestRedirect", "ReferrerPolicy", "Storage", "ReadableByteStreamController", "ReadableStreamByobRequest", "HtmlInputElement", "FileList"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "web_sys_unstable_apis"]

#[target.'cfg(all(target_family = "wasm", target_feature = "simd128"))'.package.metadata]

[workspace]
members = ["server_tests", "server"]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
