[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustww = { path = "../" }
console_error_panic_hook = { version = "0.1.6" }
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["console", "Response", "ReadableByteStreamController", "ReadableStreamDefaultController"] }
futures = "0.3.25"
js-sys = "0.3.60"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
